# jehoz.github.io

./: 20231020_and_were_live.html  index.html  jehoz-github-io.cabal  package-lock.json  package.json  packages.dhall  tester.html
.github/workflows/: build-and-deploy.yml
app/: Document.hs  FileUtils.hs  Main.hs  MarkdownNode.hs  MarkdownParser.hs  Website.hs
articles/2023/10/20/: 20231020_and_were_live.html  and_were_live.html
articles/2023/12/01/: hydraulic_erosion.html
articles/2023/12/1/: 20231201_hydraulic_erosion.html  hydraulic_erosion.html
articles/2024/05/10/: parametric_legs_and_gaits.html
articles/2024/05/10/res/: creature_walk_2.webm  creature_walk_4.webm  wave_3.webm
articles/2024/09/05/: propagator_networks_pcg.html
content/: 20231020_and_were_live.md  tester.md
content/articles/2023/12/01/: hydraulic_erosion.md
content/articles/2023/12/01/res/: 02.mkv  02.webm  04.webm
content/articles/2023/12/1/: 20231201_hydraulic_erosion.md  hydraulic_erosion.md
content/articles/2024/05/10/: parametric_legs_and_gaits.md
content/articles/2024/05/10/res/: creature_walk_1.webm  creature_walk_3.webm  creature_walk_5.webm  creature_walk_6.webm  desmos_leg_1.webm  desmos_leg_2.webm  desmos_leg_3.webm  wave_1.webm  wave_2.webm
content/articles/2024/09/05/: propagator_networks_pcg.md
content/static/: article.css  index.css
content/static/scripts/: zig.min.js
content/static/style/: article.css  index.css
src/: Website.hs  index.js
src/Website/: IO.hs  Parsers.hs  Types.hs
static/: index.css
static/style/: article.css  index.css
templates/: article.html  index.html
