cabal-version:      3.0
name:               jehoz-github-io
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             jehoz
maintainer:         jesseholzman96@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable jehoz-github-io
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0
      , blaze-html
      , optparse-applicative
      , directory
      , filepath
    hs-source-dirs:   app
    default-language: Haskell2010
