cabal-version:   3.0
name:            jehoz-github-io
version:         0.1.0.0
license:         GPL-3.0-only
license-file:    LICENSE
author:          jehoz
maintainer:      jesseholzman96@gmail.com
build-type:      Simple
extra-doc-files: README.md

common warnings
  ghc-options: -Wall

executable jehoz-github-io
  import:           warnings
  main-is:          Main.hs
  other-modules:    
    , MarkdownNode
    , MarkdownParser
    , Document
  build-depends:
    , base                  ^>=4.16.4.0
    , blaze-html
    , cmark
    , directory
    , filepath
    , megaparsec
    , optparse-applicative
    , text

  hs-source-dirs:   app
  default-language: Haskell2010
