cabal-version: 3.0
name:          website
version:       0.1.0.0
license:       GPL-3.0-only
license-file:  LICENSE
author:        jehoz
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Website
    Website.IO
    Website.Parsers
    Website.Types

  build-depends:
    , base                  ^>=4.16.4.0
    , blaze-html
    , containers
    , cmark
    , directory
    , filepath
    , HsYAML
    , mustache
    , text
    , time

  hs-source-dirs:   src
  default-language: Haskell2010

executable jehoz-github-io
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base             ^>=4.16.4.0
    , optparse-applicative
    , website

  hs-source-dirs:   app
  default-language: Haskell2010
